# infinity-codefest

./: Cargo.toml  README.md  api.json
docker/: Makefile  docker-compose.yaml
docs/: api.json
src/: main.rs
src/consumers/: transaction.rs  user.rs
src/database/: redis.rs
src/handlers/: transaction.rs  user.rs
src/models/: transaction.rs  user.rs
src/modules/: mod.rs
src/modules/currency/: conversion.rs
src/modules/transaction/: service.rs
src/modules/user/: service.rs
src/producers/: transaction.rs  user.rs
src/routes/: mod.rs  transaction.rs  user.rs
src/tasks/: transaction.rs  user.rs
src/types/: currency.rs  mod.rs
src/types/transaction/: event.rs  mod.rs  types.rs
src/types/user/: event.rs  mod.rs  types.rs
