[package]
name = "infinity-codefest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = {version = "1.0.204", features =["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread"] }
redis = {version = "0.26.0", features = ["tokio-comp"] }
uuid ={version = "1.10.0", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }