[package]
name = "infinity-codefest"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1.21.2", features = ["full", "macros", "rt-multi-thread"] }
serde_json = "1.0"
amiquip = "0.4.2"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
axum = "0.7.5"
serde = {version = "1.0.204", features =["derive"] }
redis = {version = "0.26.0", features = ["tokio-comp"] }
validator = { version = "0.16", features = ["derive"] }